--- a/rental.html
+++ b/rental.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Organic Concepts</title>
+    <title>Rental - Organic Concepts</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -32,7 +32,7 @@
     </div>
 
     <div class="content container">
-        <h1>Home</h1>
+        <h1>Rental</h1>
     </div>
 
 
