--- a/events.html
+++ b/events.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Design - Organic Concepts</title>
+    <title>Organic Events</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -13,7 +13,7 @@
     <div id="NAVBAR" class="navBar">
 
         <div class="navLogo" onclick="openPage('home')">
-            <p>Organic Concepts</p>
+            <p>Organic Events</p>
         </div>
 
         <div class="navLinks">
@@ -39,7 +39,7 @@
     </div>
 
     <div class="content container">
-        <h1>Design</h1>
+        <h1>Events</h1>
     </div>
 
 
