--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 
 <head>
     <meta charset="UTF-8">
@@ -8,49 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 
-<body onload="checkNav()">
-
-    <div class="navBack">
-        <div id="NAVBAR" class="navBar">
-
-            <div class="navLogo" onclick="openPage('home')">
-                <p>Organic Concepts</p>
-            </div>
-
-            <div class="navLinks">
-
-                <div id="NAVRENTAL" class="navLink" onclick="openPage('rental')">
-                    <p>Rental</p>
-                </div>
-
-                <div id="NAVDESIGN" class="navLink" onclick="openPage('design')">
-                    <p>Design</p>
-                </div>
-
-                <div id="NAVCONSULTING" class="navLink" onclick="openPage('consulting')">
-                    <p>Consulting</p>
-                </div>
-
-                <div id="NAVEVENTS" class="navLink" onclick="openPage('events')">
-                    <p>Events</p>
-                </div>
-
-            </div>
-
-        </div>
-    </div>
-
-
-    <section>
-        <div class="content container">
-            <h1>Home</h1>
-        </div>
-    </section>
-
-
-
-
-    <script src="./script.js"></script>
+<body>
 </body>
 
 </html>
