--- a/imprint.html
+++ b/imprint.html
@@ -4,28 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Organic Concepts - Impressum</title>
 </head>
 
 <body>
     <h1>Impressum</h1>
 
     <h2>Angaben gem&auml;&szlig; &sect; 5 TMG</h2>
-    <p>Moritz Meyer<br />
-    Organic Concepts<br />
+    <p>Organic Concepts<br />
+    Moritz Meyer<br />
     Teutonenweg 3<br />
     23558 L&uuml;beck</p>
 
     <h2>Kontakt</h2>
-    <p>Telefon: &#91;Telefonnummer&#93;<br />
-    E-Mail: moritz@organicconcepts.de</p>
+    E-Mail: info@organicconcepts.de</p>
 
     <h2>Umsatzsteuer-ID</h2>
     <p>Umsatzsteuer-Identifikationsnummer gem&auml;&szlig; &sect; 27 a Umsatzsteuergesetz:<br />
     44075623894</p>
 
     <h2>Gewerbeanmeldung</h2>
-    <p>Die Gewerbeanmeldung nach &sect; 14 &amp; &sect; 55 c GewO wurde am 01.01.2001 durch Stadt Osnabr&uuml;ck erteilt.</p>
+    <p>Die Gewerbeanmeldung nach &sect; 14 &amp; &sect; 55 c GewO wurde am 03.06.2016 durch die Stadt Osnabr&uuml;ck erteilt.</p>
 
     <h2>EU-Streitschlichtung</h2>
     <p>Die Europ&auml;ische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit: <a href="https://ec.europa.eu/consumers/odr/" target="_blank" rel="noopener noreferrer">https://ec.europa.eu/consumers/odr/</a>.<br /> Unsere E-Mail-Adresse finden Sie oben im Impressum.</p>
