--- a/imprint.html
+++ b/imprint.html
@@ -5,34 +5,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Organic Concepts - Impressum</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <h1>Impressum</h1>
-
-    <h2>Angaben gem&auml;&szlig; &sect; 5 TMG</h2>
-    <p>Organic Concepts<br />
-    Moritz Meyer<br />
-    Teutonenweg 3<br />
-    23558 L&uuml;beck</p>
-
-    <h2>Kontakt</h2>
-    E-Mail: info@organicconcepts.de</p>
-
-    <h2>Umsatzsteuer-ID</h2>
-    <p>Umsatzsteuer-Identifikationsnummer gem&auml;&szlig; &sect; 27 a Umsatzsteuergesetz:<br />
-    44075623894</p>
-
-    <h2>Gewerbeanmeldung</h2>
-    <p>Die Gewerbeanmeldung nach &sect; 14 &amp; &sect; 55 c GewO wurde am 03.06.2016 durch die Stadt Osnabr&uuml;ck erteilt.</p>
-
-    <h2>EU-Streitschlichtung</h2>
-    <p>Die Europ&auml;ische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit: <a href="https://ec.europa.eu/consumers/odr/" target="_blank" rel="noopener noreferrer">https://ec.europa.eu/consumers/odr/</a>.<br /> Unsere E-Mail-Adresse finden Sie oben im Impressum.</p>
-
-    <h2>Verbraucher&shy;streit&shy;beilegung/Universal&shy;schlichtungs&shy;stelle</h2>
-    <p>Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.</p>
-
-    <p>Quelle: <a href="https://www.e-recht24.de/impressum-generator.html">https://www.e-recht24.de/impressum-generator.html</a></p>
+    <div class="centerDiv">
+        <div class="logoDiv" onclick="openHome()">
+            <img class="logo" src="./img/logo/OC_Logo_small.svg" alt="">
+        </div>
+        <div class="imprintDiv">
+            <div>
+                <h1>Impressum</h1>
+                <p>
+                    nach § 5 TMG
+                </p>
+                <p>
+                    Organic Concepts <br>
+                    Moritz Meyer <br>
+                    Teutonenweg 3 <br>
+                    23558 Lübeck
+                </p>
+                <br>
+                <h3>Kontakt</h3>
+                <p>
+                    <a href="mailto:info@organicconcepts.de">info@organicconcepts.de</a>
+                </p>
+                <br>
+                <h3>Umsatzsteuer Informationen</h3>
+                <p>
+                    nach § 27 UStG <br>
+                    <br>
+                    folgt in kürze
+                </p>
+            </div>
+        </div>
+        <div class="footer">
+            <div class="footerCards">
+                <div class="footerCard">
+                    <h3>Rechtliches</h3>
+                    <a href="./imprint.html">Impressum</a>
+                    <a href="./index.html">Datenschutz</a>
+                    <a href="./index.html">AGB</a>
+                </div>
+                <div class="footerCard">
+                    <h3>Socials</h3>
+                    <a href="">Instagram</a>
+                    <a href="">Facebook</a>
+                    <a href="">GitHub</a>
+                </div>
+            </div>  
+            <span class="copyright">Copyright © 2024 Organic Concepts</span>          
+        </div>
+    </div>
+    
+    <script src="./script/redirect.js"></script>
 </body>
 
 </html>
