--- a/index.html
+++ b/index.html
@@ -9,7 +9,29 @@
 </head>
 
 <body>
-    
+    <div class="centerDiv">
+        <div class="logoDiv" onclick="openHome()">
+            <img class="logo" src="./img/logo/OC_Logo_small.svg" alt="">
+        </div>
+        <div class="footer">
+            <div class="footerCards">
+                <div class="footerCard">
+                    <h3>Rechtliches</h3>
+                    <a href="./imprint.html">Impressum</a>
+                    <a href="./index.html">Datenschutz</a>
+                    <a href="./index.html">AGB</a>
+                </div>
+                <div class="footerCard">
+                    <h3>Socials</h3>
+                    <a href="">Instagram</a>
+                    <a href="">Facebook</a>
+                    <a href="">GitHub</a>
+                </div>
+            </div>  
+            <span class="copyright">Copyright © 2024 Organic Concepts</span>          
+        </div>
+    </div>
+    <!-- SCRIPTS -->
+    <script src="./script/redirect.js"></script>
 </body>
-
 </html>
