--- a/develop.html
+++ b/develop.html
@@ -10,13 +10,13 @@
 
 <body>
     <div class="nav">
-        <div class="navContainer">
+        <div class="container navContainer">
             <div class="navLogo" onclick="openHome()">
                 <img src="./img/logo/OC_Logo_small.svg" alt="" class="autoFit">
             </div>
             <div class="navLinkBox">
-                <div class="navLink">
-                    <span>Technik Pool</span>
+                <div class="navLink" onclick="openPool()">
+                    <span>Pool</span>
                 </div>
                 <div class="navLink">
                     <span>Consulting</span>
