--- a/pool.html
+++ b/pool.html
@@ -29,6 +29,15 @@
         </div>
     </div>
 
+    <div class="container">
+        <div class="pool">
+            <h1>_ POOL</h1>
+            <span class="sub">
+                State of the Art Equipment für deinen Verwendungszweck.
+            </span>
+        </div>
+    </div>
+
     <!-- SCRIPTS -->
     <script src="./script/redirect.js"></script>
 </body>
