--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h1>_ CONTENT IN DEVELOPMENT</h1>
     
             <span class="sub">
-                Wir arbeiten gerade an unserer neuen Website, damit du besser mit uns inteagieren und wir uns z.B. besser vorstellen können. Wenn du mehr darüber erfahren willst, abboniere einfach unseren Newsletter.
+                Wir arbeiten gerade an unserer neuen Website, damit du besser mit uns inteagieren und mehr über uns erfahren kannst. Wenn du über den Launch informiert werden willst, abboniere einfach unseren Newsletter.
             </span>
     
             <button>NEWSLETTER</button>
