--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <img src="./img/logo/OC_Logo_small.svg" alt="" class="autoFit">
             </div>
             <div class="navLinkBox">
-                <div class="navLink" onclick="openPool()">
+                <div class="navLink" onclick="">
                     <span>Pool</span>
                 </div>
                 <div class="navLink">
