--- a/index.html
+++ b/index.html
@@ -10,9 +10,6 @@
 
     <link rel="stylesheet" href="./style.css">
 
-    <!-- NEWSLETTER SCRIPTS-->
-    <script src="https://t79600460.emailsys1a.net/form/276/133/e17271b1d8/popup.js?_g=1727639287" async></script>
-
 </head>
 
 <body>
@@ -45,7 +42,7 @@
                 Wir arbeiten gerade an unserer neuen Website, damit du besser mit uns interagieren und mehr über uns erfahren kannst. Wenn du über den Launch informiert werden willst, abboniere einfach unseren Newsletter.
             </span>
     
-            <button class="rm-open-popup">NEWSLETTER</button>
+            <button>NEWSLETTER</button>
         </div>
     </div>
     
