--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Organic Concepts</title>
 
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./img/icons/OC_Inits_white_black.png">
 
 </head>
 
@@ -34,6 +35,7 @@
     </div>
 
     <div class="container">
+
         <div class="development">
 
             <h1>_ CONTENT IN DEVELOPMENT</h1>
