--- a/pool.html
+++ b/pool.html
@@ -2,10 +2,14 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pool</title>
+
+    <title>OC | Pool</title>
+
     <link rel="stylesheet" href="./style.css">
+
 </head>
 
 <body>
@@ -16,7 +20,7 @@
                 <img src="./img/logo/OC_Logo_small.svg" alt="" class="autoFit">
             </div>
             <div class="navLinkBox">
-                <div class="navLink" onclick="openPool()">
+                <div class="navLink" onclick="">
                     <span>Pool</span>
                 </div>
                 <div class="navLink">
@@ -30,12 +34,48 @@
     </div>
 
     <div class="container">
+
         <div class="pool">
             <h1>_ POOL</h1>
             <span class="sub">
                 State of the Art Equipment für deinen Verwendungszweck.
             </span>
         </div>
+
+    </div>
+
+    <div class="container">
+        
+        <div class="item">
+            <h2>SOUNDBOKS GO</h2>
+            <img style="max-width: 400px; background-color: white;" src="./img/pool/SOUNDBOKS_GO_FRONT.webp" alt="">
+        </div>
+
+    </div>
+
+    <div class="container">
+
+        <div class="footer">
+
+            <div class="card">
+                <span class="cardHeading">Rechtliches</span>
+                <a href="">Impressum</a>
+                <a href="">Datenschutz</a>
+                <a href="">AGB</a>
+            </div>
+
+            <div class="cardSocial">
+                <img src="./img/icons/mail.png" alt="">
+                <img src="./img/icons/github.png" alt="">
+                <img src="./img/icons/instagram.png" alt="">
+            </div>
+
+        </div>
+
+        <div class="copyright">
+            <span>Copyright © 2024 Organic Concepts</span>
+        </div>
+
     </div>
 
     <!-- SCRIPTS -->
