--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Organic Concepts</title>
 
     <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./img/icons/OC_Inits_white_black.png">
+    <link rel="icon" href="./img/icons/favicon.ico">
 
 </head>
 
