design changes and adeed xonek2

--- a/pool.html
+++ b/pool.html
@@ -80,7 +80,7 @@
                 <div class="flexColumnCenterCenter">
                     <span class="sub">Soundboks</span>
                     <h2>SOUNDBOKS GO</h2>
-                    <button>Anfragen</button>
+                    <button>anfragen</button>
                 </div>
             </div>
 
@@ -91,7 +91,18 @@
                 <div class="flexColumnCenterCenter">
                     <span class="sub">Pioneer DJ</span>
                     <h2>DJM 2000</h2>
-                    <button>Anfragen</button>
+                    <button>anfragen</button>
+                </div>
+            </div>
+
+            <div class="poolObject flexColumnCenter colorSetB">
+                <div class="poolObjectImage flexCenter">
+                    <img src="./img/pool/xone_k2.png" alt="">
+                </div>
+                <div class="flexColumnCenterCenter">
+                    <span class="sub">Allen & Heath</span>
+                    <h2>Xone:K2</h2>
+                    <button>anfragen</button>
                 </div>
             </div>
 
