--- a/imprint.html
+++ b/imprint.html
@@ -53,33 +53,37 @@
         </div>
     </div>
 
-    <div class="container">
-        <div class="header imprint flexColumnCenter">
-            <h1>Impressum</h1>
-            <span class="sub">nach nach § 5 TMG</span>
-            <br>
-            <span>
-                Organic Concepts <br>
-                Moritz Meyer <br>
-                Teutonenweg 3 <br>
-                23558 Lübeck
-            </span>
-            <br>
-            <br>
-            <h4>Kontakt</h4>
-            <span>
-                <a href="mailto:info@organicconcepts.de">info@organicconcepts.de</a>
-            </span>
-            <br>
-            <br>
-            <h4>Umsatzsteuer Informationen</h4>
-            <span class="sub">nach § 27 UStG</span>
-            <br>
-            <span>
-                folgt in kürze...
-            </span>
+    <div class="fullWidth flexColumnCenterCenter colorSetA">
+        <div class="container">
+            <div class="header imprint flexColumnCenter">
+                <h1>Impressum</h1>
+                <span class="sub">nach nach § 5 TMG</span>
+                <br>
+                <span>
+                    Organic Concepts <br>
+                    Moritz Meyer <br>
+                    Teutonenweg 3 <br>
+                    23558 Lübeck
+                </span>
+                <br>
+                <br>
+                <h4>Kontakt</h4>
+                <span>
+                    <a href="mailto:info@organicconcepts.de">info@organicconcepts.de</a>
+                </span>
+                <br>
+                <br>
+                <h4>Umsatzsteuer Informationen</h4>
+                <span class="sub">nach § 27 UStG</span>
+                <br>
+                <span>
+                    folgt in kürze...
+                </span>
+            </div>
         </div>
     </div>
+
+    
 
     <div class="container">
 
