--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             <div class="pool flexRowBetweenCenter wrap">
                 <div>
-                    <span class="sub">aus unserem <a href="./pool.html">Pool</a> kannst du</span>
+                    <span class="sub">aus unserem Pool kannst du</span>
                     <h1>Technik mieten</h1>
                     <button onclick="openPool()">Pool</button>
                 </div>
@@ -106,7 +106,7 @@
                 <span class="cardHeading">
                     Navigation
                 </span>
-                <a href="./index.html">Startseite</a>
+                <a href="./">Startseite</a>
                 <a href="./pool.html">Pool</a>
             </div>
 
