--- a/pool.html
+++ b/pool.html
@@ -58,7 +58,7 @@
 
             <div class="pool flexRowBetweenCenter wrap">
                 <div>
-                    <span class="sub">aus unserem <a href="./pool.html">Pool</a> kannst du</span>
+                    <span class="sub">aus unserem Pool kannst du</span>
                     <h1>Technik mieten</h1>
                 </div>
                 <div>
@@ -117,7 +117,7 @@
                 <span class="cardHeading">
                     Navigation
                 </span>
-                <a href="./index.html">Startseite</a>
+                <a href="./">Startseite</a>
                 <a href="./pool.html">Pool</a>
             </div>
 
