--- a/imprint.html
+++ b/imprint.html
@@ -93,7 +93,7 @@
                 <span class="cardHeading">
                     Navigation
                 </span>
-                <a href="./">Startseite</a>
+                <a href="https://organicconcepts.de">Startseite</a>
                 <a href="./pool.html">Pool</a>
             </div>
 
