--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <span class="cardHeading">
                     Navigation
                 </span>
-                <a href="./">Startseite</a>
+                <a href="https://organicconcepts.de">Startseite</a>
                 <a href="./pool.html">Pool</a>
             </div>
 
