--- a/pool.html
+++ b/pool.html
@@ -61,7 +61,7 @@
                     <span class="sub">aus unserem Pool kannst du</span>
                     <h1>Technik mieten</h1>
                 </div>
-                <div class="flexCenter flexGrow1">
+                <div>
                     <img src="./img/pool/pioneer_setup_a.png" alt="" style="max-width: 350px;">
                 </div>
                 
