--- a/pool.html
+++ b/pool.html
@@ -58,8 +58,8 @@
 
             <div class="pool flexRowBetweenCenter wrap">
                 <div>
-                    <span class="sub">aus unserem Pool kannst du</span>
-                    <h1>Technik mieten</h1>
+                    <span class="sub">Aus unserem Pool kannst du</span>
+                    <h1>Technik mieten.</h1>
                 </div>
                 <div>
                     <img src="./img/pool/pioneer_setup_a.png" alt="" style="max-width: 350px;">
