--- a/pool.html
+++ b/pool.html
@@ -62,9 +62,8 @@
                     <h1>Technik mieten.</h1>
                 </div>
                 <div>
-                    <img src="./img/pool/pioneer_setup_a.png" alt="" style="max-width: 350px;">
+                    <img class="poolImage" src="./img/pool/pioneer_setup_a.png" alt="">
                 </div>
-                
             </div> 
 
         </div>
@@ -143,7 +142,7 @@
     </div>
 
     <!-- SCRIPTS -->
-     <script src="./script/redirect.js"></script>
     <script src="./script/redirect.js"></script>
+    <script src="./script/animation.js"></script>
 </body>
 </html>
