--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
             <div class="pool flexRowBetweenCenter wrap">
                 <div>
-                    <span class="sub">aus unserem Pool kannst du</span>
-                    <h1>Technik mieten</h1>
+                    <span class="sub">Aus unserem Pool kannst du</span>
+                    <h1>Technik mieten.</h1>
                     <button onclick="openPool()">Pool</button>
                 </div>
                 <div class="felx" style="max-width: 500px;">
