--- a/index.html
+++ b/index.html
@@ -67,12 +67,11 @@
                 <div>
                     <span class="sub">Aus unserem Pool kannst du</span>
                     <h1>Technik mieten.</h1>
-                    <button onclick="openPool()">Pool</button>
+                    <button>Pool</button>
                 </div>
-                <div class="felx" style="max-width: 500px;">
-                    <img src="./img/pool/pioneer_setup_a.png" alt="" style="max-width: 100%;">
+                <div>
+                    <img class="poolImage" src="./img/pool/pioneer_setup_a.png" alt="">
                 </div>
-                
             </div> 
 
         </div>
@@ -80,9 +79,9 @@
 
     <div class="fullWidth flexColumnCenterCenter colorSetA">
         <div class="container">
-            <div class="partner flexColumnCenterCenter colorSetB">
-                <span class="sub">mach doch mal</span>
-                <h1>Konzepte & Projekte</h1>
+            <div class="consulting flexColumnCenterCenter colorSetB">
+                <span class="sub">Mach doch mal</span>
+                <h1>Konzepte & Projekte.</h1>
                 <button>Consulting</button>
             </div>
         </div>
@@ -90,9 +89,9 @@
 
     <div class="fullWidth flexColumnCenterCenter colorSetA">
         <div class="container">
-            <div class="tools flexColumnCenterCenter">
-                <span class="sub">unser Development</span>
-                <h1>dein UI & UX</h1>
+            <div class="design flexColumnCenterCenter">
+                <span class="sub">Unser Design prägt dein</span>
+                <h1>UI & UX Development.</h1>
                 <button>Design</button>
             </div>
         </div>
