added POOL Button Function

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div>
                     <span class="sub">Aus unserem Pool kannst du</span>
                     <h1>Technik mieten.</h1>
-                    <button>Pool</button>
+                    <button onclick="openPool()">Pool</button>
                 </div>
                 <div>
                     <img class="poolImage" src="./img/pool/pioneer_setup_a.png" alt="">
