added home Background

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         </div>
     </div>
 
-    <div class="container">
-        <div class="header flexColumnCenterCenter">
+    <div class="home fullWidth flexColumnCenterCenter">
+        <div class="header container flexColumnCenterCenter">
             <span class="sub">wir sind dein</span>
             <h1>digitaler Partner</h1>
         </div>
