added agb and datenschutz

--- a/agb.html
+++ b/agb.html
@@ -59,7 +59,7 @@
         <div class="container">
             <div class="agb flexColumnCenter">
                 <h1>Allgemeine Geschäftsbedingungen</h1>
-                <span class="sub">für den Verleih von Veranstaltungstechnik</span>
+                <h2>I. für den Verleih von Veranstaltungstechnik</h2>
                 <br>
                 <h3>1. Geltungsbereich</h3>
                 <span>
@@ -112,7 +112,7 @@
                 <br>
                 <h3>10. Datenschutz</h3>
                 <span>
-                    Personenbezogene Daten werden ausschließlich zur Abwicklung des Mietverhältnisses verarbeitet. Weitere Informationen finden sich in unserer Datenschutzerklärung.
+                    Personenbezogene Daten werden ausschließlich zur Abwicklung des Mietverhältnisses verarbeitet. Weitere Informationen finden sich in unserer <a href="./datenschutz.html">Datenschutzerklärung</a>.
                 </span>
                 <br>
                 <h3>11. Gerichtsstand</h3>
