added Discord URLs

--- a/gaming.html
+++ b/gaming.html
@@ -60,8 +60,9 @@
 
             <div class="flexCenter">
                 <div class="flexColumnCenterCenter">
-                    <span class="sub">Join our</span>
+                    <span class="sub">Triff uns im</span>
                     <h1>Discord Server.</h1>
+                    <button onclick="openDiscord()">beitreten</button>
                 </div>
             </div> 
 
