--- a/imprint.html
+++ b/imprint.html
@@ -48,6 +48,10 @@
                 <div class="navLink flexCenter">
                     <span>Design</span>
                 </div>
+
+                <div id="CART" class="cartIcon flexCenter" onclick="openCart()">
+                    <img src="./img/icons/cart.png" alt="Cart Icon" />
+                </div>
         
             </div>
         
