--- a/pool.html
+++ b/pool.html
@@ -51,8 +51,8 @@
                     <span>Design</span>
                 </div>
 
-                <div id="CART" class="navLink flexCenter" onclick="openCart()">
-                    <span>Cart</span>
+                <div id="CART" class="cartIcon flexCenter" onclick="openCart()">
+                    <img src="./img/icons/cart.png" alt="Cart Icon" />
                 </div>
         
             </div>
