--- a/imprint.html
+++ b/imprint.html
@@ -89,6 +89,7 @@
         </div>
     </div>
 
+    <div id="sidebar"></div>
     <div id="footer" class="container"></div>
     
     <!-- SCRIPTS -->
