--- a/pool.html
+++ b/pool.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <div id="navigation" class="nav flexColumnCenterCenter"></div>
+    <div id="navigation" class="flexColumnCenterCenter"></div>
 
     <div class="fullWidth flexColumnCenterCenter colorSetA" style="padding-top: 100px;">
         <div class="container">
