--- a/gaming.html
+++ b/gaming.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <div id="navigation" class="nav flexColumnCenterCenter"></div>
+    <div id="navigation" class="flexColumnCenterCenter"></div>
 
     <div class="fullWidth flexColumnCenterCenter colorSetB" style="padding-top: 200px;">
         <div class="container">
