coming soon buttons

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
         <div class="consulting flexColumnCenterCenter colorSetB">
           <span class="sub">Mach doch mal</span>
           <h1>Konzepte & Projekte.</h1>
-          <button>Consulting</button>
+          <button>COMING SOON</button>
+          <!-- <button>Consulting</button> -->
         </div>
       </div>
     </div>
@@ -57,7 +58,8 @@
         <div class="design flexColumnCenterCenter">
           <span class="sub">Unser Design prägt dein</span>
           <h1>UI & UX Development.</h1>
-          <button>Design</button>
+          <button>COMING SOON</button>
+          <!-- <button>Design</button> -->
         </div>
       </div>
     </div>
