--- a/pool/index.html
+++ b/pool/index.html
@@ -90,6 +90,6 @@
     <script src="../script/importCode.js"></script>
     <script src="../script/redirect.js"></script>
     <script src="../script/animation.js"></script>
-    <script src="./script/cart.js"></script>
+    <script src="../script/cart.js"></script>
   </body>
 </html>
