--- a/gaming/index.html
+++ b/gaming/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>OC | Gaming</title>
 
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="icon" href="./img/icons/favicon.ico" />
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="icon" href="../img/icons/favicon.ico" />
   </head>
 
   <body>
@@ -36,7 +36,7 @@
         <iframe
           src="https://discord.com/widget?id=1363124809348939947&theme=dark"
           width="350"
-          height="400"
+          height="600"
           allowtransparency="true"
           frameborder="0"
           sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"
@@ -48,9 +48,9 @@
     <div id="footer" class="container"></div>
 
     <!-- SCRIPTS -->
-    <script src="./script/importCode.js"></script>
-    <script src="./script/redirect.js"></script>
-    <script src="./script/animation.js"></script>
-    <script src="./script/cart.js"></script>
+    <script src="../script/importCode.js"></script>
+    <script src="../script/redirect.js"></script>
+    <script src="../script/animation.js"></script>
+    <script src="../script/cart.js"></script>
   </body>
 </html>
