--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
 
     <title>Organic Concepts</title>
 
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="icon" href="./img/icons/favicon.ico" />
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="icon" href="../img/icons/favicon.ico" />
   </head>
 
   <body>
+    <!-- Navigation -->
     <div id="navigation" class="flexColumnCenterCenter"></div>
 
+    <!-- Home Header -->
     <div class="home fullWidth flexColumnCenterCenter">
       <div class="header container flexColumnCenterCenter">
         <span class="sub">wir sind dein</span>
@@ -22,8 +24,9 @@
 
     <div
       class="fullWidth flexColumnCenterCenter colorSetA"
-      style="padding-top: 100px"
+      style="padding-top: 100px; padding-bottom: 100px"
     >
+      <!-- Home Pool -->
       <div class="container">
         <div class="pool flexRowBetweenCenter wrap">
           <div>
@@ -34,7 +37,7 @@
           <div>
             <img
               class="poolImage"
-              src="./img/pool/pioneer_setup_a.png"
+              src="../img/pool/pioneer_setup_a.png"
               alt=""
             />
           </div>
@@ -42,24 +45,27 @@
       </div>
     </div>
 
+    <!-- Home Consulting -->
     <div class="fullWidth flexColumnCenterCenter colorSetA">
-      <div class="container">
-        <div class="consulting flexColumnCenterCenter colorSetB">
-          <span class="sub">Mach doch mal</span>
-          <h1>Konzepte & Projekte.</h1>
-          <button>COMING SOON</button>
-          <!-- <button>Consulting</button> -->
+      <div class="container" style="padding-bottom: 100px">
+        <div class="consultingCard flexRowAroundCenter colorSetB">
+          <div class="flexColumnCenterCenter">
+            <span class="sub">Strategisch denken,</span>
+            <h2 style="margin-bottom: 0">digital handeln.</h2>
+          </div>
+
+          <button onclick="openConsulting()">Consulting</button>
         </div>
       </div>
     </div>
 
-    <div class="fullWidth flexColumnCenterCenter colorSetA">
-      <div class="container">
-        <div class="design flexColumnCenterCenter">
-          <span class="sub">Unser Design prägt dein</span>
-          <h1>UI & UX Development.</h1>
-          <button>COMING SOON</button>
-          <!-- <button>Design</button> -->
+    <!-- Home Events -->
+    <div class="events fullWidth flexColumnCenterCenter colorSetB">
+      <div class="container" style="z-index: 10">
+        <div class="flexColumnCenterCenter">
+          <span class="sub">Betritt unsere Welt</span>
+          <h2>avantgardistischer</h2>
+          <button onclick="openEvents()">Events</button>
         </div>
       </div>
     </div>
@@ -68,9 +74,9 @@
     <div id="footer" class="container"></div>
 
     <!-- SCRIPTS -->
-    <script src="./script/importCode.js"></script>
-    <script src="./script/redirect.js"></script>
-    <script src="./script/animation.js"></script>
-    <script src="./script/cart.js"></script>
+    <script src="../script/importCode.js"></script>
+    <script src="../script/redirect.js"></script>
+    <script src="../script/animation.js"></script>
+    <script src="../script/cart.js"></script>
   </body>
 </html>
