--- a/imprint/index.html
+++ b/imprint/index.html
@@ -22,8 +22,8 @@
           <span>
             Organic Concepts <br />
             Moritz Meyer <br />
-            Teutonenweg 3 <br />
-            23558 Lübeck
+            Königstraße 129 <br />
+            23552 Lübeck
           </span>
           <br />
           <br />
