--- a/consulting/index.html
+++ b/consulting/index.html
@@ -6,8 +6,8 @@
 
     <title>OC | Consulting</title>
 
-    <link rel="stylesheet" href="../style.css" />
-    <link rel="icon" href="../img/icons/favicon.ico" />
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="icon" href="/img/icons/favicon.ico" />
   </head>
 
   <body>
@@ -17,7 +17,7 @@
     <div class="fullWidth flexColumnCenterCenter colorSetB">
       <div class="container flexColumnCenterCenter">
         <div class="consultingHead flexRowCenterCenter wrap">
-          <img src="../img/consulting/profile.jpg" alt="" />
+          <img src="/img/consulting/profile.jpg" alt="" />
           <div>
             <h1>Consulting</h1>
 
@@ -80,9 +80,9 @@
     <div id="footer" class="container"></div>
 
     <!-- SCRIPTS -->
-    <script src="../script/importCode.js"></script>
-    <script src="../script/redirect.js"></script>
-    <script src="../script/animation.js"></script>
-    <script src="../script/cart.js"></script>
+    <script src="/script/importCode.js"></script>
+    <script src="/script/redirect.js"></script>
+    <script src="/script/animation.js"></script>
+    <script src="/script/cart.js"></script>
   </body>
 </html>
