--- a/events/index.html
+++ b/events/index.html
@@ -6,8 +6,8 @@
 
     <title>OC | Events</title>
 
-    <link rel="stylesheet" href="../style.css" />
-    <link rel="icon" href="../img/icons/favicon.ico" />
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="icon" href="/img/icons/favicon.ico" />
 
     <meta
       http-equiv="refresh"
