--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
     <title>Organic Concepts</title>
 
-    <link rel="stylesheet" href="../style.css" />
-    <link rel="icon" href="../img/icons/favicon.ico" />
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="icon" href="/img/icons/favicon.ico" />
   </head>
 
   <body>
@@ -35,11 +35,7 @@
             <button onclick="openPool()">Pool</button>
           </div>
           <div>
-            <img
-              class="poolImage"
-              src="../img/pool/pioneer_setup_a.png"
-              alt=""
-            />
+            <img class="poolImage" src="/img/pool/pioneer_setup_a.png" alt="" />
           </div>
         </div>
       </div>
@@ -74,9 +70,9 @@
     <div id="footer" class="container"></div>
 
     <!-- SCRIPTS -->
-    <script src="../script/importCode.js"></script>
-    <script src="../script/redirect.js"></script>
-    <script src="../script/animation.js"></script>
-    <script src="../script/cart.js"></script>
+    <script src="/script/importCode.js"></script>
+    <script src="/script/redirect.js"></script>
+    <script src="/script/animation.js"></script>
+    <script src="/script/cart.js"></script>
   </body>
 </html>
