--- a/pool/index.html
+++ b/pool/index.html
@@ -6,8 +6,8 @@
 
     <title>OC | Pool</title>
 
-    <link rel="stylesheet" href="../style.css" />
-    <link rel="icon" href="../img/icons/favicon.ico" />
+    <link rel="stylesheet" href="/style.css" />
+    <link rel="icon" href="/img/icons/favicon.ico" />
   </head>
 
   <body>
@@ -24,11 +24,7 @@
             <h1>Technik mieten.</h1>
           </div>
           <div>
-            <img
-              class="poolImage"
-              src="../img/pool/pioneer_setup_a.png"
-              alt=""
-            />
+            <img class="poolImage" src="/img/pool/pioneer_setup_a.png" alt="" />
           </div>
         </div>
       </div>
@@ -38,7 +34,7 @@
       <div class="container poolObjects flexRowAroundCenter wrap">
         <div class="poolObject flexColumnCenter colorSetB">
           <div class="poolObjectImage flexCenter">
-            <img src="../img/pool/soundboks_go.png" alt="" />
+            <img src="/img/pool/soundboks_go.png" alt="" />
           </div>
           <div class="flexColumnCenterCenter">
             <span class="sub">Soundboks</span>
@@ -53,7 +49,7 @@
 
         <div class="poolObject flexColumnCenter colorSetB">
           <div class="poolObjectImage flexCenter">
-            <img src="../img/pool/pioneer_djm_2000.png" alt="" />
+            <img src="/img/pool/pioneer_djm_2000.png" alt="" />
           </div>
           <div class="flexColumnCenterCenter">
             <span class="sub">Pioneer DJ</span>
@@ -68,7 +64,7 @@
 
         <div class="poolObject flexColumnCenter colorSetB">
           <div class="poolObjectImage flexCenter">
-            <img src="../img/pool/xone_k2.png" alt="" />
+            <img src="/img/pool/xone_k2.png" alt="" />
           </div>
           <div class="flexColumnCenterCenter">
             <span class="sub">Allen & Heath</span>
@@ -87,9 +83,9 @@
     <div id="footer" class="container"></div>
 
     <!-- SCRIPTS -->
-    <script src="../script/importCode.js"></script>
-    <script src="../script/redirect.js"></script>
-    <script src="../script/animation.js"></script>
-    <script src="../script/cart.js"></script>
+    <script src="/script/importCode.js"></script>
+    <script src="/script/redirect.js"></script>
+    <script src="/script/animation.js"></script>
+    <script src="/script/cart.js"></script>
   </body>
 </html>
